--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     build:
       context: ..
       dockerfile: Dockerfile
-    container_name: fastapi_backend
+    container_name: fastapi-backend
     ports:
     - "8080:8080"
     networks:
@@ -11,22 +11,24 @@ services:
   
   node:
     build:
-      context: ../frontend
+      context: ../frontend/
       dockerfile: Dockerfile
-    container_name: node_frontend
+    container_name: node-frontend
     ports:
-    - "5000:5000"
+    - "80:5000"
     networks:
     - rag-app
     depends_on:
     - fastapi
   
-  # admin:
-  #   build: ../src
-  #   ports:
-  #     - "8501:8501"
-  #   depends_on:
-  #     - fastapi
+  admin:
+    build: ..
+    ports:
+      - "8000:8000"
+    depends_on:
+      - fastapi
+    container_name: admin-panel
+    command: streamlit run src/admin_ui.py --server.port=8000 --server.baseUrlPath=/admin
 
 networks:  
   rag-app:
