--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ idna==3.10
 iniconfig==2.1.0
 Jinja2==3.1.6
 jiter==0.10.0
+joblib==1.5.1
 jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.25.0
@@ -45,7 +46,6 @@ jsonschema-specifications==2025.4.1
 langchain==0.3.27
 langchain-community==0.3.27
 langchain-core==0.3.72
-langchain-experimental==0.3.4
 langchain-google-genai==2.1.8
 langchain-openai==0.3.28
 langchain-pinecone==0.2.11
@@ -60,6 +60,7 @@ mdurl==0.1.2
 multidict==6.6.3
 mypy_extensions==1.1.0
 narwhals==2.0.1
+nltk==3.9.1
 numpy==2.3.2
 openai==1.98.0
 orjson==3.11.1
@@ -102,6 +103,8 @@ requests-toolbelt==1.0.0
 rich==14.1.0
 rpds-py==0.26.0
 rsa==4.9.1
+scipy==1.16.1
+setuptools==80.9.0
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
@@ -123,6 +126,7 @@ urllib3==2.5.0
 uvicorn==0.35.0
 vcrpy==7.0.0
 watchdog==6.0.0
+wheel==0.45.1
 wrapt==1.17.2
 yarl==1.20.1
 zstandard==0.23.0
