--- a/requirements.txt
+++ b/requirements.txt
@@ -14,13 +14,17 @@ certifi==2025.8.3
 cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
+cohere==5.16.2
 dataclasses-json==0.6.7
 distro==1.9.0
 dnspython==2.7.0
 docx2txt==0.9
 fastapi==0.116.1
+fastavro==1.12.0
+filelock==3.18.0
 filetype==1.2.0
 frozenlist==1.7.0
+fsspec==2025.7.0
 gitdb==4.0.12
 GitPython==3.1.45
 google-ai-generativelanguage==0.6.18
@@ -31,9 +35,11 @@ greenlet==3.2.3
 grpcio==1.74.0
 grpcio-status==1.74.0
 h11==0.16.0
+hf-xet==1.1.7
 httpcore==1.0.9
 httpx==0.28.1
-httpx-sse==0.4.1
+httpx-sse==0.4.0
+huggingface-hub==0.34.3
 idna==3.10
 iniconfig==2.1.0
 Jinja2==3.1.6
@@ -44,6 +50,7 @@ jsonpointer==3.0.0
 jsonschema==4.25.0
 jsonschema-specifications==2025.4.1
 langchain==0.3.27
+langchain-cohere==0.4.5
 langchain-community==0.3.27
 langchain-core==0.3.72
 langchain-google-genai==2.1.8
@@ -115,9 +122,12 @@ streamlit==1.47.1
 syrupy==4.9.1
 tenacity==9.1.2
 tiktoken==0.9.0
+tokenizers==0.21.4
 toml==0.10.2
 tornado==6.5.1
 tqdm==4.67.1
+types-PyYAML==6.0.12.20250516
+types-requests==2.32.4.20250611
 typing-inspect==0.9.0
 typing-inspection==0.4.1
 typing_extensions==4.14.1
