modified:   README.md 	modified:   frontend/.env 	modified:   frontend/server/routes.ts 	modified:   main.py 	modified:   requirements.txt 	new file:   src/admin_auth.yaml 	modified:   src/admin_ui.py

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,19 +6,23 @@ altair==5.5.0
 annotated-types==0.7.0
 anyio==4.10.0
 attrs==25.3.0
+bcrypt==4.3.0
 beautifulsoup4==4.13.4
 blinker==1.9.0
 bs4==0.0.2
 cachetools==5.5.2
+captcha==0.7.1
 certifi==2025.8.3
 cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.2.1
 cohere==5.16.2
+cryptography==45.0.6
 dataclasses-json==0.6.7
 distro==1.9.0
 dnspython==2.7.0
 docx2txt==0.9
+extra-streamlit-components==0.1.80
 fastapi==0.116.1
 fastavro==1.12.0
 filelock==3.18.0
@@ -92,6 +96,7 @@ pydantic-settings==2.10.1
 pydantic_core==2.33.2
 pydeck==0.9.1
 Pygments==2.19.2
+PyJWT==2.10.1
 pypdf==5.9.0
 pytest==8.4.1
 pytest-asyncio==0.26.0
@@ -119,6 +124,7 @@ soupsieve==2.7
 SQLAlchemy==2.0.42
 starlette==0.47.2
 streamlit==1.47.1
+streamlit-authenticator==0.4.2
 syrupy==4.9.1
 tenacity==9.1.2
 tiktoken==0.9.0
