--- a/supervisord.conf
+++ b/supervisord.conf
@@ -4,17 +4,17 @@ logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisord.pid
 
 [program:admin_ui]
-command=streamlit run src/admin_ui.py --server.port=8501 --server.address=0.0.0.0
+command=streamlit run src/admin_ui.py --server.port=8000 --server.baseUrlPath=/admin
 directory=/app
 autostart=true
 autorestart=true
-stderr_logfile=/var/log/admin_ui.err.log
-stdout_logfile=/var/log/admin_ui.out.log
+stderr_logfile=/dev/stderr
+stdout_logfile=/dev/stdout
 
-[program:user_ui]
-command=streamlit run src/user_ui.py --server.port=8502 --server.address=0.0.0.0
+[program:main]
+command=python3 main.py
 directory=/app
 autostart=true
 autorestart=true
-stderr_logfile=/var/log/user_ui.err.log
-stdout_logfile=/var/log/user_ui.out.log
+stderr_logfile=/dev/stderr
+stdout_logfile=/dev/stdout
