--- a/requirements.txt
+++ b/requirements.txt
@@ -5,87 +5,74 @@ aiosignal==1.4.0
 altair==5.5.0
 annotated-types==0.7.0
 anyio==4.10.0
+asyncio==4.0.0
 attrs==25.3.0
 bcrypt==4.3.0
-beautifulsoup4==4.13.4
 blinker==1.9.0
-bs4==0.0.2
 cachetools==5.5.2
 captcha==0.7.1
 certifi==2025.8.3
 cffi==1.17.1
-charset-normalizer==3.4.2
+charset-normalizer==3.4.3
 click==8.2.1
-cohere==5.16.2
 cryptography==45.0.6
 dataclasses-json==0.6.7
 distro==1.9.0
-dnspython==2.7.0
-docx2txt==0.9
+dotenv==0.9.9
 extra-streamlit-components==0.1.80
 fastapi==0.116.1
-fastavro==1.12.0
-filelock==3.18.0
 filetype==1.2.0
 frozenlist==1.7.0
-fsspec==2025.7.0
 gitdb==4.0.12
 GitPython==3.1.45
 google-ai-generativelanguage==0.6.18
 google-api-core==2.25.1
 google-auth==2.40.3
 googleapis-common-protos==1.70.0
-greenlet==3.2.3
+greenlet==3.2.4
 grpcio==1.74.0
 grpcio-status==1.74.0
 h11==0.16.0
-hf-xet==1.1.7
 httpcore==1.0.9
 httpx==0.28.1
-httpx-sse==0.4.0
-huggingface-hub==0.34.3
+httpx-sse==0.4.1
 idna==3.10
 iniconfig==2.1.0
 Jinja2==3.1.6
 jiter==0.10.0
-joblib==1.5.1
 jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.25.0
 jsonschema-specifications==2025.4.1
 langchain==0.3.27
-langchain-cohere==0.4.5
 langchain-community==0.3.27
-langchain-core==0.3.72
-langchain-google-genai==2.1.8
-langchain-openai==0.3.28
+langchain-core==0.3.74
+langchain-google-genai==2.1.9
+langchain-openai==0.3.30
 langchain-pinecone==0.2.11
 langchain-tests==0.3.20
 langchain-text-splitters==0.3.9
-langsmith==0.4.11
-loguru==0.7.3
-markdown-it-py==3.0.0
+langsmith==0.4.14
+markdown-it-py==4.0.0
 MarkupSafe==3.0.2
 marshmallow==3.26.1
 mdurl==0.1.2
-multidict==6.6.3
+multidict==6.6.4
 mypy_extensions==1.1.0
-narwhals==2.0.1
-nltk==3.9.1
+narwhals==2.1.2
 numpy==2.3.2
-openai==1.98.0
-orjson==3.11.1
+openai==1.99.9
+orjson==3.11.2
 packaging==24.2
 pandas==2.3.1
 pillow==11.3.0
-pinecone==7.0.2
-pinecone-client==2.2.4
+pinecone==7.3.0
 pinecone-plugin-assistant==1.7.0
 pinecone-plugin-interface==0.0.7
 pluggy==1.6.0
 propcache==0.3.2
 proto-plus==1.26.1
-protobuf==6.31.1
+protobuf==6.32.0
 py-cpuinfo==9.0.0
 pyarrow==21.0.0
 pyasn1==0.6.1
@@ -97,7 +84,6 @@ pydantic_core==2.33.2
 pydeck==0.9.1
 Pygments==2.19.2
 PyJWT==2.10.1
-pypdf==5.9.0
 pytest==8.4.1
 pytest-asyncio==0.26.0
 pytest-benchmark==5.1.0
@@ -113,36 +99,31 @@ regex==2025.7.34
 requests==2.32.4
 requests-toolbelt==1.0.0
 rich==14.1.0
-rpds-py==0.26.0
+rpds-py==0.27.0
 rsa==4.9.1
-scipy==1.16.1
-setuptools==80.9.0
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
-soupsieve==2.7
-SQLAlchemy==2.0.42
+SQLAlchemy==2.0.43
 starlette==0.47.2
-streamlit==1.47.1
+streamlit==1.48.1
 streamlit-authenticator==0.4.2
 syrupy==4.9.1
 tenacity==9.1.2
-tiktoken==0.9.0
-tokenizers==0.21.4
+tiktoken==0.11.0
 toml==0.10.2
-tornado==6.5.1
+tornado==6.5.2
 tqdm==4.67.1
-types-PyYAML==6.0.12.20250516
-types-requests==2.32.4.20250611
+typing==3.7.4.3
 typing-inspect==0.9.0
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 tzdata==2025.2
 urllib3==2.5.0
+uuid==1.30
 uvicorn==0.35.0
 vcrpy==7.0.0
 watchdog==6.0.0
-wheel==0.45.1
-wrapt==1.17.2
+wrapt==1.17.3
 yarl==1.20.1
 zstandard==0.23.0
