--- a/.github/workflows/docker-builder-worflow.yml
+++ b/.github/workflows/docker-builder-worflow.yml
@@ -17,26 +17,27 @@ jobs:
     # Step 2: Define commit SHA
     - name: Set short SHA
       run: echo "SHA=${GITHUB_SHA::7}" >> $GITHUB_ENV
-    # Step 3: Retag the old frontend image
-    - name: Retag images
-      run: |
-        docker pull ${{vars.DOCKER_REPO}}:frontend-latest
-        docker tag ${{vars.DOCKER_REPO}}:frontend-latest ${{vars.DOCKER_REPO}}:frontend-${{ env.SHA }}
-        docker pull ${{vars.DOCKER_REPO}}:backend-latest
-        docker tag ${{vars.DOCKER_REPO}}:backend-latest ${{vars.DOCKER_REPO}}:backend-${{ env.SHA }}
-        docker push ${{vars.DOCKER_REPO}}:frontend-${{ env.SHA }} && docker push ${{vars.DOCKER_REPO}}:backend-${{ env.SHA }}
-    # Step 4: Build the images
+    # Step 3: Build the images
     - name: Check out the code
       uses: actions/checkout@v4
-    # Step 5: Build the images
+    # Step 4: Build the images
     - name: Build the images
-      run: docker compose -f Docker/docker-compose.dev.yml build
-    # Step 6: Tag the image
-    - name: Tag the Docker image
-      run: docker tag docker-frontend ${{vars.DOCKER_REPO}}:frontend-latest && docker tag docker-backend ${{vars.DOCKER_REPO}}:backend-latest
-    # Step 7: Push to Dockerhub
+      run: docker compose -f Docker/docker-compose.dev.yml build --parallel
+    # Step 5: Tag images
+    - name: Tag images
+      run: |
+        docker tag docker-frontend ${{vars.DOCKER_REPO}}:frontend-latest
+        docker tag docker-frontend ${{vars.DOCKER_REPO}}:frontend-${{ env.SHA }}
+        docker tag docker-backend ${{vars.DOCKER_REPO}}:backend-latest
+        docker tag docker-backend ${{vars.DOCKER_REPO}}:backend-${{ env.SHA }}
+    # Step 6: Push to Dockerhub
     - name: Push the new images to Dockerhub
-      run: docker push ${{vars.DOCKER_REPO}}:frontend-latest && docker push ${{vars.DOCKER_REPO}}:backend-latest
+      run: |
+        docker push ${{vars.DOCKER_REPO}}:frontend-latest
+        docker push ${{vars.DOCKER_REPO}}:backend-latest
+
+        docker push ${{vars.DOCKER_REPO}}:frontend-${{ env.SHA }}
+        docker push ${{vars.DOCKER_REPO}}:backend-${{ env.SHA }}
   pull-images-in-server:
     needs: build-and-push
     runs-on: ubuntu-latest
