--- a/requirements.txt
+++ b/requirements.txt
@@ -53,6 +53,7 @@ langchain-pinecone==0.2.11
 langchain-tests==0.3.20
 langchain-text-splitters==0.3.9
 langsmith==0.4.14
+logging==0.4.9.6
 markdown-it-py==4.0.0
 MarkupSafe==3.0.2
 marshmallow==3.26.1
@@ -84,6 +85,7 @@ pydantic_core==2.33.2
 pydeck==0.9.1
 Pygments==2.19.2
 PyJWT==2.10.1
+pypdf==6.0.0
 pytest==8.4.1
 pytest-asyncio==0.26.0
 pytest-benchmark==5.1.0
