Modified the compose files and improved the CI/CD pipeline

--- a/Docker/docker-compose.dev.yml
+++ b/Docker/docker-compose.dev.yml
@@ -3,7 +3,8 @@ services:
     build:
       context: ..
       dockerfile: Dockerfile
-    container_name: backend
+    container_name: rabwah-backend
+    image_name: rabwah-backend
     ports:
     - "8080:8080"
     - "8000:8000"
@@ -14,7 +15,8 @@ services:
     build:
       context: ../frontend/
       dockerfile: Dockerfile
-    container_name: frontend
+    container_name: rabwah-frontend
+    image_name: rabwah-frontend
     ports:
     - "80:5000"
     networks:
