--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.15
 aiohttp-retry==2.9.1
+aioredis==2.0.1
 aiosignal==1.4.0
 altair==5.5.0
 annotated-types==0.7.0
 anyio==4.10.0
+async-timeout==5.0.1
 asyncio==4.0.0
 attrs==25.3.0
 bcrypt==4.3.0
@@ -18,11 +20,14 @@ click==8.2.1
 cryptography==45.0.6
 dataclasses-json==0.6.7
 distro==1.9.0
+docx2txt==0.9
 dotenv==0.9.9
 extra-streamlit-components==0.1.80
 fastapi==0.116.1
+filelock==3.19.1
 filetype==1.2.0
 frozenlist==1.7.0
+fsspec==2025.9.0
 gitdb==4.0.12
 GitPython==3.1.45
 google-ai-generativelanguage==0.6.18
@@ -33,13 +38,16 @@ greenlet==3.2.4
 grpcio==1.74.0
 grpcio-status==1.74.0
 h11==0.16.0
+hf-xet==1.1.10
 httpcore==1.0.9
 httpx==0.28.1
 httpx-sse==0.4.1
+huggingface-hub==0.35.3
 idna==3.10
 iniconfig==2.1.0
 Jinja2==3.1.6
 jiter==0.10.0
+joblib==1.5.2
 jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.25.0
@@ -48,6 +56,7 @@ langchain==0.3.27
 langchain-community==0.3.27
 langchain-core==0.3.74
 langchain-google-genai==2.1.9
+langchain-huggingface==0.3.1
 langchain-openai==0.3.30
 langchain-pinecone==0.2.11
 langchain-tests==0.3.20
@@ -57,9 +66,12 @@ markdown-it-py==4.0.0
 MarkupSafe==3.0.2
 marshmallow==3.26.1
 mdurl==0.1.2
+mpmath==1.3.0
 multidict==6.6.4
 mypy_extensions==1.1.0
 narwhals==2.1.2
+networkx==3.3
+nltk==3.9.1
 numpy==2.3.2
 openai==1.99.9
 orjson==3.11.2
@@ -95,6 +107,7 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
 PyYAML==6.0.2
+redis==6.4.0
 referencing==0.36.2
 regex==2025.7.34
 requests==2.32.4
@@ -102,6 +115,11 @@ requests-toolbelt==1.0.0
 rich==14.1.0
 rpds-py==0.27.0
 rsa==4.9.1
+safetensors==0.6.2
+scikit-learn==1.7.2
+scipy==1.16.2
+sentence-transformers==5.1.1
+setuptools==70.2.0
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
@@ -109,12 +127,16 @@ SQLAlchemy==2.0.43
 starlette==0.47.2
 streamlit==1.48.1
 streamlit-authenticator==0.4.2
+sympy==1.13.3
 syrupy==4.9.1
 tenacity==9.1.2
+threadpoolctl==3.6.0
 tiktoken==0.11.0
+tokenizers==0.22.1
 toml==0.10.2
 tornado==6.5.2
 tqdm==4.67.1
+transformers==4.56.2
 typing==3.7.4.3
 typing-inspect==0.9.0
 typing-inspection==0.4.1
