--- a/.github/workflows/docker-builder-worflow.yml
+++ b/.github/workflows/docker-builder-worflow.yml
@@ -22,8 +22,8 @@ jobs:
           application:
             - 'src/**'
             - 'Docker/Dockerfile'
-            - 'Docker/docker-compose.prod.yaml'
-            - 'Docker/docker-compose.dev.yaml'
+            - 'Docker/docker-compose.prod.yml'
+            - 'Docker/docker-compose.dev.yml'
             - 'requirements.txt'
             - '**.py'
             - '.env**'
@@ -47,7 +47,7 @@ jobs:
       uses: actions/checkout@v4
     # Step 4: Build the images
     - name: Build the images
-      run: docker compose -f Docker/docker-compose.dev.yaml build --parallel
+      run: docker compose -f Docker/docker-compose.dev.yml build --parallel
     # Step 5: Tag images
     - name: Tag images
       run: |
@@ -78,7 +78,7 @@ jobs:
       uses: actions/checkout@v4
       with:
         sparse-checkout: |
-          Docker/docker-compose.prod.yaml, redis.conf, .env.redis
+          Docker/docker-compose.prod.yml, redis.conf, .env.redis
         sparse-checkout-cone-mode: false
     
     # Copy necessary files into the server
@@ -88,7 +88,7 @@ jobs:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USER }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
-        source: "Docker/docker-compose.prod.yaml, redis.conf, .env.redis"
+        source: "Docker/docker-compose.prod.yml, redis.conf, .env.redis"
         target: "~/"
 
     # SSH To server, pull images, run the containers, cleanup
@@ -104,14 +104,14 @@ jobs:
           echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
           # Pull and run the images
-          docker compose -f Docker/docker-compose.prod.yaml up -d --pull always
+          docker compose -f Docker/docker-compose.prod.yml up -d --pull always
 
           # Prune old images and containers
           docker image prune -af
           docker container prune -f
 
           # Cleanup
-          rm -f docker-compose.prod.yaml
+          rm -f docker-compose.prod.yml
 
           # Logout of Docker
           docker logout
