modified:   .env 	modified:   .github/workflows/docker-builder-worflow.yml 	modified:   Docker/docker-compose.prod.yml 	modified:   Dockerfile 	modified:   main.py 	modified:   models.py 	modified:   requirements.txt 	modified:   src/utils/Vector_db.py 	modified:   src/utils/full_chain.py 	modified:   src/utils/redis.py

--- a/.env
+++ b/.env
@@ -6,6 +6,7 @@ PINECONE_API_KEY=pcsk_4uk8zS_QMsr74gMKs5CXWYVB64CWXxtzcpfhsey1wCpo42Vyxejz6J6Q1G
 # CORS Middleware
 ALLOW_ORIGINS=[
     "http://localhost:5173",
+    "http://frontend:5173"
     ]
 ALLOW_CREDENTIALS=True
 ALLOW_METHODS=["*"]
@@ -17,5 +18,5 @@ HOST=0.0.0.0
 # HOST=127.0.0.1
 
 # REDIS
-REDIS_URL=redis://REDIS_HOST:6379
+REDIS_URL="redis://redis_server:6379"
 SESSION_TTL=86400
