--- a/.github/workflows/docker-builder-worflow.yml
+++ b/.github/workflows/docker-builder-worflow.yml
@@ -88,7 +88,7 @@ jobs:
         host: ${{ secrets.SERVER_HOST }}
         username: ${{ secrets.SERVER_USER }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
-        source: "Docker/docker-compose.prod.yml, redis.conf, .env.redis"
+        source: "Docker/docker-compose.prod.yml, redis.conf"
         target: "~/"
 
     # SSH To server, pull images, run the containers, cleanup
