--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,39 @@
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.15
 aiohttp-retry==2.9.1
-aioredis==2.0.1
 aiosignal==1.4.0
 altair==5.5.0
 annotated-types==0.7.0
-anyio==4.10.0
-async-timeout==5.0.1
-asyncio==4.0.0
+anyio==4.11.0
 attrs==25.3.0
-bcrypt==4.3.0
+bcrypt==5.0.0
 blinker==1.9.0
-cachetools==5.5.2
+cachetools==6.2.0
 captcha==0.7.1
 certifi==2025.8.3
-cffi==1.17.1
+cffi==2.0.0
+chardet==5.2.0
 charset-normalizer==3.4.3
-click==8.2.1
-cryptography==45.0.6
+click==8.3.0
+cryptography==46.0.2
 dataclasses-json==0.6.7
 distro==1.9.0
 docx2txt==0.9
-dotenv==0.9.9
-extra-streamlit-components==0.1.80
-fastapi==0.116.1
-filelock==3.19.1
+extra-streamlit-components==0.1.81
+fastapi==0.118.0
+filelock==3.13.1
 filetype==1.2.0
 frozenlist==1.7.0
-fsspec==2025.9.0
+fsspec==2024.6.1
 gitdb==4.0.12
 GitPython==3.1.45
-google-ai-generativelanguage==0.6.18
+google-ai-generativelanguage==0.7.0
 google-api-core==2.25.1
-google-auth==2.40.3
+google-auth==2.41.1
 googleapis-common-protos==1.70.0
 greenlet==3.2.4
-grpcio==1.74.0
-grpcio-status==1.74.0
+grpcio==1.75.1
+grpcio-status==1.75.1
 h11==0.16.0
 hf-xet==1.1.10
 httpcore==1.0.9
@@ -44,92 +41,77 @@ httpx==0.28.1
 httpx-sse==0.4.1
 huggingface-hub==0.35.3
 idna==3.10
-iniconfig==2.1.0
 Jinja2==3.1.6
-jiter==0.10.0
+jiter==0.11.0
 joblib==1.5.2
 jsonpatch==1.33
 jsonpointer==3.0.0
-jsonschema==4.25.0
-jsonschema-specifications==2025.4.1
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
 langchain==0.3.27
-langchain-community==0.3.27
-langchain-core==0.3.74
-langchain-google-genai==2.1.9
-langchain-huggingface==0.3.1
-langchain-openai==0.3.30
-langchain-pinecone==0.2.11
-langchain-tests==0.3.20
-langchain-text-splitters==0.3.9
-langsmith==0.4.14
-markdown-it-py==4.0.0
-MarkupSafe==3.0.2
+langchain-community==0.3.30
+langchain-core==0.3.77
+langchain-google-genai==2.1.12
+langchain-openai==0.3.34
+langchain-pinecone==0.2.12
+langchain-text-splitters==0.3.11
+langsmith==0.4.31
+MarkupSafe==3.0.3
 marshmallow==3.26.1
-mdurl==0.1.2
 mpmath==1.3.0
 multidict==6.6.4
 mypy_extensions==1.1.0
-narwhals==2.1.2
+narwhals==2.6.0
 networkx==3.3
-nltk==3.9.1
-numpy==2.3.2
-openai==1.99.9
-orjson==3.11.2
+numpy==2.3.3
+openai==2.0.0
+orjson==3.11.3
 packaging==24.2
-pandas==2.3.1
+pandas==2.3.3
 pillow==11.3.0
 pinecone==7.3.0
-pinecone-plugin-assistant==1.7.0
+pinecone-plugin-assistant==1.8.0
 pinecone-plugin-interface==0.0.7
-pluggy==1.6.0
 propcache==0.3.2
 proto-plus==1.26.1
-protobuf==6.32.0
-py-cpuinfo==9.0.0
+protobuf==6.32.1
 pyarrow==21.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
-pycparser==2.22
-pydantic==2.11.7
-pydantic-settings==2.10.1
+pycparser==2.23
+pydantic==2.11.9
+pydantic-settings==2.11.0
 pydantic_core==2.33.2
 pydeck==0.9.1
-Pygments==2.19.2
 PyJWT==2.10.1
-pypdf==6.0.0
-pytest==8.4.1
-pytest-asyncio==0.26.0
-pytest-benchmark==5.1.0
-pytest-codspeed==4.0.0
-pytest-recording==0.13.4
-pytest-socket==0.7.0
+pypdf==6.1.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.2
-PyYAML==6.0.2
+PyYAML==6.0.3
 redis==6.4.0
 referencing==0.36.2
-regex==2025.7.34
-requests==2.32.4
+regex==2025.9.18
+requests==2.32.5
 requests-toolbelt==1.0.0
-rich==14.1.0
-rpds-py==0.27.0
+rpds-py==0.27.1
 rsa==4.9.1
 safetensors==0.6.2
 scikit-learn==1.7.2
 scipy==1.16.2
 sentence-transformers==5.1.1
 setuptools==70.2.0
+simsimd==6.5.3
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
 SQLAlchemy==2.0.43
-starlette==0.47.2
-streamlit==1.48.1
+starlette==0.48.0
+streamlit==1.50.0
 streamlit-authenticator==0.4.2
 sympy==1.13.3
-syrupy==4.9.1
 tenacity==9.1.2
+TextLoader==0.0.9
 threadpoolctl==3.6.0
 tiktoken==0.11.0
 tokenizers==0.22.1
@@ -137,16 +119,13 @@ toml==0.10.2
 tornado==6.5.2
 tqdm==4.67.1
 transformers==4.56.2
-typing==3.7.4.3
 typing-inspect==0.9.0
-typing-inspection==0.4.1
-typing_extensions==4.14.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
 uuid==1.30
-uvicorn==0.35.0
-vcrpy==7.0.0
+uvicorn==0.37.0
 watchdog==6.0.0
-wrapt==1.17.3
 yarl==1.20.1
-zstandard==0.23.0
+zstandard==0.25.0
