Finished up everything

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,7 @@
+# Docker containers
 RAG_ENDPOINT=http://backend:8080
 REDIS_URL="redis://redis_server:6379"
+
+# For local testing
+# RAG_ENDPOINT=http://127.0.0.1:8080
+# REDIS_URL="redis://localhost:6379"
