--- a/requirements.txt
+++ b/requirements.txt
@@ -52,6 +52,7 @@ langchain==0.3.27
 langchain-community==0.3.30
 langchain-core==0.3.77
 langchain-google-genai==2.1.12
+langchain-huggingface==0.3.1
 langchain-openai==0.3.34
 langchain-pinecone==0.2.12
 langchain-text-splitters==0.3.11
@@ -116,6 +117,7 @@ threadpoolctl==3.6.0
 tiktoken==0.11.0
 tokenizers==0.22.1
 toml==0.10.2
+torch==2.8.0+cpu
 tornado==6.5.2
 tqdm==4.67.1
 transformers==4.56.2
